[package]
name = "bcrw"
description = "Bun Clap ReWrite"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
thiserror = "2.0.17"
indexmap = "2.12.1"
rand = "0.9.2"

[build-dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
indexmap = "2.12.1"

[[bin]]
name = "bun"
path = "src/main.rs"
